# malloc

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_rand_mix_5_commands  tmp_rand_commands
includes/: alignment.h  heap.h  malloc.h  test_utils.h  tests.h  utils.h
libft/: Makefile
src/: CMakeLists.txt  heap.c  malloc.c  utils.c
src/libft/: Makefile
test/: CMakeLists.txt  init.c  large_malloc_1.c  large_malloc_2.c  large_realloc_1.c  random_malloc.c  random_malloc_free.c  run_tests.sh  small_malloc_1.c  small_malloc_2.c  small_malloc_3.c  small_malloc_4.c  small_malloc_5.c  small_realloc_1.c  small_realloc_2.c  small_realloc_3.c  small_realloc_4.c  small_realloc_5.c  test.c  test_utils.c  tiny.c  tiny_malloc_1.c  tiny_malloc_2.c  tiny_malloc_3.c  tiny_malloc_4.c  tiny_realloc_1.c  tiny_realloc_2.c
test/random_tester/: long-rand-test.py  rand-generator.py  rand-tester.c  run_random_test.sh
